--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "nodemon": "^3.1.7",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "pg": "^8.13.0"
   }
 }
